# audia

./: Cargo.toml
src/: audio_client.rs  audio_sink.rs  buffer.rs  capture_client.rs  com.rs  device.rs  device_enumerator.rs  main.rs  stream_format.rs  utils.rs
src/asr/: mod.rs  model.rs  prediction.rs  python_net_request.rs
src/writer/: asr_connector.rs  hound_writer.rs  mod.rs
